# AddExifToMandeye

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
